# freelancer_ssebastian95

./: .gitignore  README.md  architecture-dbt-athena.drawio  data.csv  financial.py  main.py  pyproject.toml  read.ipynb  requirements.txt  symbol.csv  template.yaml
aws/disable_schedule/: main.py
aws/lambda/: financial.py  main.py
date/: 2018-01-31.json  2018-03-02.json  2018-04-01.json  2018-05-01.json  2018-05-31.json  2018-06-30.json  2018-07-30.json  2018-08-29.json  2018-09-28.json  2018-10-28.json  2018-11-27.json  2018-12-27.json  2019-01-26.json  2019-02-25.json  2019-03-27.json  2019-04-26.json  2019-05-26.json  2019-06-25.json  2019-07-25.json  2019-08-24.json  2019-09-23.json  2019-10-23.json  2019-11-22.json  2019-12-22.json  2020-01-21.json  2020-02-20.json  2020-03-21.json  2020-04-20.json  2020-05-20.json  2020-06-19.json  2020-07-19.json  2020-08-18.json  2020-09-17.json  2020-10-17.json  2020-11-16.json  2020-12-16.json  2021-01-15.json  2021-02-14.json  2021-03-16.json  2021-04-15.json  (+33 more)
date/earning_calendar/: 2018-01-31.json  2018-03-02.json  2018-05-31.json  2018-07-30.json  2018-09-28.json  2018-10-28.json  2018-11-27.json  2018-12-27.json  2019-09-23.json  2019-10-23.json  2019-12-22.json  2020-02-20.json  2020-04-20.json  2021-01-15.json  2021-02-14.json  2021-03-16.json  2021-04-15.json  2021-07-14.json  2021-08-13.json  2022-01-10.json  2022-04-10.json  2022-06-09.json  2022-08-08.json  2022-12-06.json  (+2 more)
envio/: .gitignore  main.py  pyproject.toml
envio/script/local/: financial.py
home/: financial.py  main.py
libs/: requirements.txt
(+12 files in other folders)
